plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.quantumzone'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-validation'

		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
		implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

		runtimeOnly 'com.mysql:mysql-connector-j'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		// MapStruct para mapeo automático
		implementation 'org.mapstruct:mapstruct:1.6.3'
		annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
		// Para usar MapStruct con Lombok
		annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

		// Testing dependencies
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.mockito:mockito-inline:5.2.0'
		testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
}

	test {
			useJUnitPlatform() // Requerido para JUnit 5
			jvmArgs '-XX:+EnableDynamicAgentLoading'
	}

tasks.named('test') {
	useJUnitPlatform()
}
